# PickUS_and_PlacUS

./: .gitignore  LICENSE  Mechanical  README.md
Electrical/: README.md
Electrical/PCB_test/: PCB_test.kicad_pcb  PCB_test.kicad_pro  PCB_test.kicad_sch  ai_slop.kicad_mod
Electrical/PNP_MOBO_V1/: PNP_MOBO_V1.kicad_pro
Electrical/PNP_MOBO_V2/: Drive.kicad_sch  PNP_MOBO_V2.kicad_pcb  PNP_MOBO_V2.kicad_pro  PNP_MOBO_V2.kicad_sch  sensor.kicad_sch
Electrical/PNP_TEST_CIRCUIT_V1/: PNP_TEST_CIRCUIT_V1.kicad_pcb  PNP_TEST_CIRCUIT_V1.kicad_pro  STENCIL.3mf
Electrical/circuitPNP/: circuitPNP.kicad_pcb  circuitPNP.kicad_pro  circuitPNP.kicad_sch  elementEletrique.drawio
Firmware_esp32/: .gitignore  README.md  platformio.ini
Firmware_esp32/doc/: Architecture_ESP.drawio  ClassDiagram.drawio  SchémaBlocProjet.drawio  StateDiagram.drawio  UML.drawio
Firmware_esp32/lib/: data.hpp
Firmware_esp32/src/: BoardConfig.h  CommandHandler.cpp  CommandHandler.h  CommunicationHandler.cpp  CommunicationHandler.h  Controller.cpp  Controller.h  DataHandler.cpp  DataHandler.h  (+22 more)
Firmware_esp32/tests/: CMakeLists.txt
Firmware_esp32/tests/host/stubs/: AccelStepper.h  Arduino.cpp  Arduino.h  MultiStepper.h  boardconfig.h
Firmware_esp32/tests/host/stubs/hardware/: limitswitch.h  mosfet.h  pressureSensor.h
Firmware_esp32/tests/host/tests/: command_handler_test.cpp  communication_handler_test.cpp  controller_test.cpp  data_handler_test.cpp  home_command_test.cpp  move_command_test.cpp  pause_command_test.cpp  pick_command_test.cpp  place_command_test.cpp  pump_command_test.cpp  stop_command_test.cpp  valve_command_test.cpp
HMI/: .gitignore  README.md
Mechanical/: README.md
(+135 files in other folders)
